--- a/style2.css
+++ b/style2.css
@@ -1677,12 +1677,14 @@ input {
   mix-blend-mode: normal;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  padding-bottom: 0.07px;
+  padding-bottom: 6px;
   padding-left: 27px;
   padding-right: 28px;
   padding-top: 5.8px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  margin-top: 10px;
+  margin-left: 3px;
 }
 
 .body-mais {
@@ -2289,8 +2291,9 @@ input {
 .body-h-1 {
   mix-blend-mode: normal;
   row-gap: 24px;
-  padding-left: 490px;
-  padding-right: 502px;
+  padding-left: 450px;
+  padding-right: 450px;
+  padding-bottom: 10px;
 }
 
 .body-promo-es {
@@ -2302,12 +2305,13 @@ input {
   mix-blend-mode: normal;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  padding-bottom: 0.46px;
   padding-left: 27px;
   padding-right: 28px;
-  padding-top: 5.8px;
+  padding-top: 6px;
+  padding-bottom: 6px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  margin-right: 6px;
 }
 
 .body-mai-s1 {
@@ -2815,13 +2819,15 @@ input {
 
 .body-t-h1 {
   padding-right: 27px;
+  padding-top: 20px;
+
 }
 
 .body-h-2 {
   mix-blend-mode: normal;
-  padding-left: 514px;
+  padding-left: 520px;
   padding-right: 520px;
-  padding-top: 40px;
+  padding-top: 50px;
   position: relative;
 }
 
@@ -2829,27 +2835,28 @@ input {
   mix-blend-mode: normal;
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
-  background-color: gold;
-  padding-bottom: 1.6px;
+  background-color: yellow;
+  padding-bottom: 1.3px;
   padding-left: 27px;
   padding-right: 28px;
   padding-top: 1.6px;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
+  margin-left: 10px;
 }
 
 .body-mai-s2 {
   line-height: 13px;
-  padding-top: 4.2px;
+  padding-top: 5px;
+  padding-bottom:5px
 }
 
 .body-est-ochegando {
   border-style: solid;
   border-color: #0000007f;
   height: 44px;
-  left: 480px;
-  right: 482px;
-  font-size: 22px;
+  left: 488px;
+  font-size: 24px;
   line-height: 26px;
 }
 
@@ -3302,9 +3309,10 @@ input {
 .body-lan-amentos-1 {
   width: 128px;
   z-index: 5;
-  left: calc(50% + 0px + -78.5px);
+  left: 650px;
   line-height: 26px;
   flex-shrink: 0;
+  height: 44px;
 }
 
 .body-t-div-newsletter-wrapper {
