--- a/style2.css
+++ b/style2.css
@@ -1249,20 +1249,16 @@ input {
 .body-nav-barra-navigation {
   border-bottom-width: 1px;
   mix-blend-mode: normal;
-  align-items: flex-start;
+  align-items: center;
   margin-bottom: -1.5px;
-  background-image: url(assets/nav-barra-navigation.png);
-  background-size: 104% 100%;
-  background-position: -53.9px 0px;
-  background-repeat: no-repeat;
   max-width: 100%;
   max-height: 100%;
   height: 50px;
   padding-left: 96px;
   padding-right: 96px;
-  font-size: 17px;
+  font-size: 19px;
   line-height: 24px;
-  font-weight: 700;
+  font-weight: bold;
   flex-shrink: 0;
 }
 <!-- Todos-->
@@ -1288,9 +1284,10 @@ input {
 }
 
 .body-t-link-link-link {
-  column-gap: 9px;
+  column-gap: 20px;
   text-align: right;
   flex-shrink: 0;
+  margin-left: 30px;
 }
 
 .body-link-1 {
