--- a/style2.css
+++ b/style2.css
@@ -1083,10 +1083,17 @@ input {
 }
 
 .body-entrar-ou-criar-conta {
-  width: none;
+  width: auto;
   line-height: 21px;
   font-weight: 700;
   flex-shrink: 0;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-size: 12.5px;
+}
+
+.body-entrar-ou-criar-conta + span {
+  color: white; 
 }
 
 .body-t-div-header-tnav-barra-navigation {
