Tela de Cadastro

--- a/style2_index.css
+++ b/style2_index.css
@@ -1196,6 +1196,8 @@ input {
   height: 115px;
   flex-shrink: 0;
   margin-right: 440px;
+  position: relative;
+  right: 50px;
 }
 
 .body-t-link-dropdown-toggle {
@@ -1263,7 +1265,7 @@ input {
   height: 50px;
   padding-left: 96px;
   padding-right: 96px;
-  font-size: 19px;
+  font-size: 17px;
   line-height: 24px;
   font-weight: bold;
   flex-shrink: 0;
@@ -1275,7 +1277,9 @@ input {
   padding-top: 10px;
 }
 .body-todos {
+  position: relative;
   text-align: right;
+  left: 35px;
 }
 
 .body-t-list-loja-navigation {
@@ -1335,7 +1339,9 @@ input {
 }
 
 .body-mang-s {
+  position: relative;
   text-align: center;
+  left: 16px;
 }
 
 .body-t-link-tlink-link-tlink-tlink-tlink-link {
@@ -3994,12 +4000,14 @@ input {
   }
 }
 
-/* Estilo do campo de busca */
 .search-input {
   width: 100%; /* Ocupar o espaço do container */
   max-width: 250px;
   height: 40px;
-  padding: 0 15px 2 35px; 
+  padding-top: 0; 
+  padding-right:15px;
+  padding-bottom: 2px;
+  padding-left: 35px; 
   font-size: 16px;
   border: 2.5px solid #ccc;
   border-radius: 20px;
