--- a/style2_login.css
+++ b/style2_login.css
@@ -932,7 +932,7 @@ input {
 
 .body-frame {
   mix-blend-mode: normal;
-  padding-left: 41px;
+  padding-left: 4px;
 }
 
 .body-ttt-criar-uma-nova-conta-form-form-validate-sejam-bem-vindos {
@@ -944,21 +944,25 @@ input {
 .body-tt-criar-uma-nova-conta-form-form-validate {
   row-gap: 31px;
   padding-left: 5px;
+  position: relative;
+  left: 45px;
 }
 
 .body-criar-uma-nova-conta {
-    font-size: 40px;
-    font-family: Oswald, ui-sans-serif, system-ui, sans-serif;
-    font-weight: 500;
-    line-height: 44px;
-    padding-right: 440px;
+  font-size: 40px;
+  font-family: Oswald, ui-sans-serif, system-ui, sans-serif;
+  font-weight: 500;
+  line-height: 44px;
+  padding-right: 411px;
+  position: relative;
+  bottom: 10px;
 }
 
 .body-form-form-validate {
     mix-blend-mode: normal;
     row-gap: 34px;
     padding-bottom: 34px;
-    padding-right: 58px;
+    padding-right: 0px;
     font-family: "Open Sans", ui-sans-serif, system-ui, sans-serif;
 }
 
@@ -1302,11 +1306,21 @@ input {
 }
 
 .body-legend-legend-1 {
-  border-bottom-width: 1px;
   mix-blend-mode: normal;
   padding-bottom: 9px;
   padding-right: 456px;
+  position: relative;
 }
+.body-legend-legend-1::after {
+  content: "";
+  position: absolute;
+  left: 0px; 
+  bottom: 0;
+  width: 622px;
+  height: 0.1px;
+  background-color: rgb(177, 176, 176);
+}
+
 
 .body-informa-es-de-acesso {
   line-height: 26px;
@@ -1481,7 +1495,7 @@ input {
 .body-sejam-bem-vindos {
   object-fit: cover;
   object-position: center;
-  width: 500px;
+  width: 618px;
   height: 500px;
   flex-shrink: 0;
 }
