primeiro script foi o botão enviar com a biblioteca SweetAlert2

--- a/style2_index.css
+++ b/style2_index.css
@@ -3311,6 +3311,8 @@ input {
   padding-right: 21px;
   padding-top: 206px;
   z-index: 3;
+  position: relative;
+  right: 130px;
 }
 
 .body-h-qs-ecolecion-veis-desde {
