--- a/style2_index.css
+++ b/style2_index.css
@@ -2,6 +2,7 @@
 @import url("https://api.fontshare.com/css?f[]=lato@400,700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@400;700");
 @import url("https://api.fontshare.com/css?f[]=oswald@400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family-Poppins:200,300,400,500,600,700,800,900&display=swap");
 
 p,
 ol,
@@ -4030,3 +4031,7 @@ input {
     font-size: 14px;
   }
 }
+
+/* Botão animado*/
+
+
