--- a/style2_index.css
+++ b/style2_index.css
@@ -4112,11 +4112,11 @@ box-sizing: border-box;
   overflow-y: auto;
 }
 
-#search-results .result-item {
+#search-results, .result-item {
   padding: 10px;
   cursor: pointer;
 }
 
-#search-results .result-item:hover {
+#search-results, .result-item:hover {
   background-color: #f0f0f0;
 }
